--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>My Personal Introduction</title>
   <style>
     body {
-      background-color:87C2BC
+      background-color:87C2BC;
     }
     h1 {
-      color: 5F9698
+      color: 5F9698;
     }
     p {
-      color:447369
+      color:447369;
     }
       
 
